Mouse, kitty theme off wallpaper

--- a/dot_config/walker/themes/hypr.css
+++ b/dot_config/walker/themes/hypr.css
@@ -1,7 +1,7 @@
-@define-color foreground #e1e2e9;
-@define-color background #111318aa;
-@define-color color1 #a5c9feee;
-@define-color border #a5c9feee;
+@define-color foreground #dfe3e7;
+@define-color background #0f1417aa;
+@define-color color1 #90cef4ee;
+@define-color border #90cef4ee;
 
 #window,
 #box,
