--- a/dot_config/waybar/wallust/colors-waybar.css
+++ b/dot_config/waybar/wallust/colors-waybar.css
@@ -1,24 +1,24 @@
 /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
  /* wallust template - colors-waybar */
 
- @define-color foreground #D7D9D4;
- @define-color background #131314;
- @define-color background-alt rgba(19,19,20,0.25);
- @define-color cursor #757576;
+ @define-color foreground #F1EEF4;
+ @define-color background #19151F;
+ @define-color background-alt rgba(25,21,31,0.25);
+ @define-color cursor #CEB7C0;
  
- @define-color color0 #3A3A3C;
- @define-color color1 #0E0D12;
- @define-color color2 #0E0E12;
- @define-color color3 #0E0E12;
- @define-color color4 #622E22;
- @define-color color5 #A4532F;
- @define-color color6 #696E64;
- @define-color color7 #BDC0BA;
- @define-color color8 #848682;
- @define-color color9 #131218;
- @define-color color10 #131218;
- @define-color color11 #131218;
- @define-color color12 #823D2D;
- @define-color color13 #DA6F3F;
- @define-color color14 #8C9285;
- @define-color color15 #BDC0BA; 
+ @define-color color0 #403C47;
+ @define-color color1 #787D9E;
+ @define-color color2 #AA7F8C;
+ @define-color color3 #7F9D9F;
+ @define-color color4 #EC73F3;
+ @define-color color5 #98A9ED;
+ @define-color color6 #D8CFDF;
+ @define-color color7 #E3DFE7;
+ @define-color color8 #9F9CA1;
+ @define-color color9 #787D9E;
+ @define-color color10 #AA7F8C;
+ @define-color color11 #7F9D9F;
+ @define-color color12 #EC73F3;
+ @define-color color13 #98A9ED;
+ @define-color color14 #D8CFDF;
+ @define-color color15 #E3DFE7; 
