Also style hyperland with wallust and stop prompting sddm

--- a/dot_config/walker/themes/hypr.css
+++ b/dot_config/walker/themes/hypr.css
@@ -1,7 +1,7 @@
-@define-color foreground #dfe3e7;
-@define-color background #0f1417aa;
-@define-color color1 #90cef4ee;
-@define-color border #90cef4ee;
+@define-color foreground #e8e0e8;
+@define-color background #151218aa;
+@define-color color1 #d8bafaee;
+@define-color border #d8bafaee;
 
 #window,
 #box,
