--- a/dot_config/gtk-4.0/matugen.css
+++ b/dot_config/gtk-4.0/matugen.css
@@ -2,19 +2,19 @@
 * DO NOT EDIT. CHANGES WILL BE OVERWRITTEN.
 */
 
-@define-color accent_color #90cef4;
-@define-color accent_fg_color #001e2d;
-@define-color accent_bg_color #90cef4;
-@define-color window_bg_color #0f1417;
-@define-color window_fg_color #dfe3e7;
-@define-color headerbar_bg_color #0f1417;
-@define-color headerbar_fg_color #dfe3e7;
-@define-color popover_bg_color #0f1417;
-@define-color popover_fg_color #dfe3e7;
-@define-color view_bg_color #0f1417;
-@define-color view_fg_color #dfe3e7;
-@define-color card_bg_color #0f1417;
-@define-color card_fg_color #dfe3e7;
+@define-color accent_color #d8bafa;
+@define-color accent_fg_color #260d44;
+@define-color accent_bg_color #d8bafa;
+@define-color window_bg_color #151218;
+@define-color window_fg_color #e8e0e8;
+@define-color headerbar_bg_color #151218;
+@define-color headerbar_fg_color #e8e0e8;
+@define-color popover_bg_color #151218;
+@define-color popover_fg_color #e8e0e8;
+@define-color view_bg_color #151218;
+@define-color view_fg_color #e8e0e8;
+@define-color card_bg_color #151218;
+@define-color card_fg_color #e8e0e8;
 @define-color sidebar_bg_color @window_bg_color;
 @define-color sidebar_fg_color @window_fg_color;
 @define-color sidebar_border_color @window_bg_color;
