--- a/dot_config/waybar/style/[Dark] Latte-Wallust combined.css
+++ b/dot_config/waybar/style/[Dark] Latte-Wallust combined.css
@@ -23,7 +23,7 @@
 * {
     font-family: "JetBrainsMono Nerd Font";
     font-weight: bold;
-	min-height: 0;  
+	min-height: 0;
     /* set font-size to 100% if font scaling is set to 1.00 using nwg-look */
     font-size: 97%;
     font-feature-settings: '"zero", "ss01", "ss02", "ss03", "ss04", "ss05", "cv31"';
@@ -71,7 +71,7 @@ tooltip {
     color:#FFFFFF;
 }
 
-#taskbar button,   
+#taskbar button,
 #workspaces button {
     color: #6E6A86;
     box-shadow: none;
@@ -164,7 +164,7 @@ tooltip {
 #custom-weather.clearNight,
 #custom-weather.cloudyFoggyDay,
 #custom-weather.cloudyFoggyNight,
-#custom-weather.default, 
+#custom-weather.default,
 #custom-weather.rainyDay,
 #custom-weather.rainyNight,
 #custom-weather.severe,
@@ -267,7 +267,7 @@ tooltip {
 }
 
 #clock {
-	color: @sapphire;
+	color: #ffd700;
     border-radius: 15px;
     border:2px solid @border-color;
 }
